# AW

./: CMakeLists.txt  main.cpp  server.key  server.pem
static/html/: index.html
static/html/all_users/: index.html
static/html/components/: header.html  header_user.html  not_auth.html
static/html/home/: index.html
static/html/js/: zoom.js
static/html/login/: index.html
static/html/scripts/: all_users.js  config.js  delete.js  header.js  home.js  login.js  logout.js  render_image.js
static/html/styles/: header.css  main.css
